// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a=!b; 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n3 [label=\\"b\\"]
node_n2 [label=\\"not\\"]
node_n3 -> node_n2 [color=transparent]
node_n3 -> node_n2:f0
}"
`;

exports[`a=(b*c)-h; 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n2 [label=\\"b\\"]
node_n3 [label=\\"c\\"]
node_n4 [
label=\\"<f0> * | <f1> *\\"
shape=\\"record\\"
]
node_n5 [label=\\"h\\"]
node_n6 [
label=\\"<f0> + | <f1> -\\"
shape=\\"record\\"
]
node_n2 -> node_n4 [color=transparent]
node_n3 -> node_n4 [color=transparent]
node_n4 -> node_n6 [color=transparent]
node_n5 -> node_n6 [color=transparent]
node_n2 -> node_n4:f0
node_n3 -> node_n4:f1
node_n4 -> node_n6:f0
node_n5 -> node_n6:f1
}"
`;

exports[`a=2+(b); 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n2 [label=\\"2\\"]
node_n3 [label=\\"b\\"]
node_n4 [
label=\\"<f0> + | <f1> +\\"
shape=\\"record\\"
]
node_n2 -> node_n4 [color=transparent]
node_n3 -> node_n4 [color=transparent]
node_n2 -> node_n4:f0
node_n3 -> node_n4:f1
}"
`;

exports[`a=2+b; 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n2 [label=\\"2\\"]
node_n3 [label=\\"b\\"]
node_n4 [
label=\\"<f0> + | <f1> +\\"
shape=\\"record\\"
]
node_n2 -> node_n4 [color=transparent]
node_n3 -> node_n4 [color=transparent]
node_n2 -> node_n4:f0
node_n3 -> node_n4:f1
}"
`;

exports[`assignements 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n2 [label=\\"2\\"]
node_n3 [label=\\"a\\"]
node_n4 [
label=\\"<f0> + | <f1> +\\"
shape=\\"record\\"
]
node_n5 [label=\\"2\\"]
node_n6 [
label=\\"<f0> + | <f1> -\\"
shape=\\"record\\"
]
node_n7 [label=\\"2\\"]
node_n8 [
label=\\"<f0> * | <f1> *\\"
shape=\\"record\\"
]
node_n9 [label=\\"2\\"]
node_n10 [
label=\\"<f0> * | <f1> /\\"
shape=\\"record\\"
]
node_n11 [label=\\"test\\" color=green]
node_n3 -> node_n4 [color=transparent]
node_n2 -> node_n4 [color=transparent]
node_n4 -> node_n6 [color=transparent]
node_n5 -> node_n6 [color=transparent]
node_n6 -> node_n8 [color=transparent]
node_n7 -> node_n8 [color=transparent]
node_n8 -> node_n10 [color=transparent]
node_n9 -> node_n10 [color=transparent]
node_n10 -> node_n11 [color=transparent]
node_n3 -> node_n4:f0
node_n2 -> node_n4:f1
node_n4 -> node_n6:f0 [label=\\"a\\"]
node_n5 -> node_n6:f1
node_n6 -> node_n8:f0 [label=\\"a\\"]
node_n7 -> node_n8:f1
node_n8 -> node_n10:f0 [label=\\"a\\"]
node_n9 -> node_n10:f1
node_n10 -> node_n11:f0 [label=\\"a\\"]
}"
`;

exports[`b=12;if(a==2) {c=b+34;} else {c=5678;} 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n2 [label=\\"12\\"]
node_n4 [label=\\"34\\"]
node_n5 [
label=\\"<f0> + | <f1> +\\"
shape=\\"record\\"
]
node_n7 [label=\\"a\\"]
node_n8 [label=\\"2\\"]
node_n6 [
label=\\"== |<f0>  | <f1> \\"
shape=\\"record\\"
]
node_n9 [label=\\"5678\\"]
node_n3 [
label=\\"<f0> 1| <f1> cond | <f2> 2\\"shape=\\"record\\"
]
node_n2 -> node_n5 [color=transparent]
node_n4 -> node_n5 [color=transparent]
node_n7 -> node_n6 [color=transparent]
node_n8 -> node_n6 [color=transparent]
node_n5 -> node_n3 [color=transparent]
node_n6 -> node_n3 [color=transparent]
node_n9 -> node_n3 [color=transparent]
node_n2 -> node_n5:f0 [label=\\"b\\"]
node_n4 -> node_n5:f1
node_n7 -> node_n6:f0
node_n8 -> node_n6:f1
node_n5 -> node_n3:f0
node_n6 -> node_n3:f1
node_n9 -> node_n3:f2
}"
`;

exports[`for loop 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n2 [label=\\"2\\"]
node_n10 [label=\\"a\\"]
node_n12 [label=\\"pipe\\"]
node_n13 [label=\\"2\\"]
node_n14 [
label=\\"<f0> + | <f1> +\\"
shape=\\"record\\"
]
subgraph cluster_n3 {label=\\"for(inti=0;i<10;i++)\\"
node_n9 [label=\\"i\\" color=orange]
node_n11 [
label=\\"<f0> + | <f1> +\\"
shape=\\"record\\"
]
node_n10 -> node_n11 [color=transparent]
node_n9 -> node_n11 [color=transparent]
node_n10 -> node_n11:f0
node_n9 -> node_n11:f1 [label=\\"i\\"]
}node_n2 -> node_n10 [color=transparent]
node_n10 -> node_n12 [color=transparent]
node_n11 -> node_n12 [color=transparent]
node_n12 -> node_n14 [color=transparent]
node_n13 -> node_n14 [color=transparent]
node_n2 -> node_n10:f0 [label=\\"a\\"]
node_n10 -> node_n12:f0
node_n11 -> node_n12:f1
node_n12 -> node_n14:f0 [label=\\"a\\"]
node_n13 -> node_n14:f1
}"
`;

exports[`function declaraton 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]

subgraph cluster_n2 {label=\\"(int)max\\"
node_n3 [label=\\"num1\\" color=orange]
node_n4 [label=\\"num2\\" color=orange]
node_n6 [
label=\\"> |<f0>  | <f1> \\"
shape=\\"record\\"
]
node_n5 [
label=\\"<f0> 1| <f1> cond | <f2> 2\\"shape=\\"record\\"
]
node_n7 [label=\\"return\\" color=orange]
node_n3 -> node_n6 [color=transparent]
node_n4 -> node_n6 [color=transparent]
node_n3 -> node_n5 [color=transparent]
node_n6 -> node_n5 [color=transparent]
node_n4 -> node_n5 [color=transparent]
node_n5 -> node_n7 [color=transparent]
node_n3 -> node_n6:f0 [label=\\"num1\\"]
node_n4 -> node_n6:f1 [label=\\"num2\\"]
node_n3 -> node_n5:f0 [label=\\"num1\\"]
node_n6 -> node_n5:f1
node_n4 -> node_n5:f2 [label=\\"num2\\"]
node_n5 -> node_n7:f0 [label=\\"result\\"]
}}"
`;

exports[`if pipe with scope 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n2 [label=\\"2\\"]
node_n3 [label=\\"1\\"]
node_n4 [
label=\\"<f0> + | <f1> +\\"
shape=\\"record\\"
]
node_n6 [label=\\"2\\"]
node_n5 [
label=\\"== |<f0>  | <f1> \\"
shape=\\"record\\"
]
node_n20 [label=\\"pipe\\"]
node_n22 [label=\\"b\\"]
node_n21 [label=\\"pipe\\"]
subgraph cluster_n7 {node_n8 [label=\\"1\\"]
node_n9 [label=\\"3\\"]
node_n11 [label=\\"3\\"]
node_n10 [
label=\\"== |<f0>  | <f1> \\"
shape=\\"record\\"
]
node_n16 [label=\\"pipe\\"]
node_n17 [label=\\"pipe\\"]
node_n18 [
label=\\"<f0> + | <f1> +\\"
shape=\\"record\\"
]
node_n19 [label=\\"act\\" color=green]
subgraph cluster_n12 {node_n13 [label=\\"2\\"]
node_n14 [label=\\"2\\"]
node_n15 [label=\\"act\\" color=green]
node_n10 -> node_n15 [color=transparent]
node_n10 -> node_n15:f0
}node_n9 -> node_n10 [color=transparent]
node_n11 -> node_n10 [color=transparent]
node_n15 -> node_n16 [color=transparent]
node_n8 -> node_n16 [color=transparent]
node_n13 -> node_n16 [color=transparent]
node_n15 -> node_n17 [color=transparent]
node_n9 -> node_n17 [color=transparent]
node_n14 -> node_n17 [color=transparent]
node_n17 -> node_n18 [color=transparent]
node_n16 -> node_n18 [color=transparent]
node_n5 -> node_n19 [color=transparent]
node_n9 -> node_n10:f0 [label=\\"a\\"]
node_n11 -> node_n10:f1
node_n15 -> node_n16:f0
node_n8 -> node_n16:f1 [label=\\"c\\"]
node_n13 -> node_n16:f2
node_n15 -> node_n17:f0
node_n9 -> node_n17:f1 [label=\\"a\\"]
node_n14 -> node_n17:f2
node_n17 -> node_n18:f0 [label=\\"a\\"]
node_n16 -> node_n18:f1 [label=\\"c\\"]
node_n5 -> node_n19:f0
}node_n2 -> node_n4 [color=transparent]
node_n3 -> node_n4 [color=transparent]
node_n4 -> node_n5 [color=transparent]
node_n6 -> node_n5 [color=transparent]
node_n19 -> node_n20 [color=transparent]
node_n4 -> node_n20 [color=transparent]
node_n17 -> node_n20 [color=transparent]
node_n19 -> node_n21 [color=transparent]
node_n22 -> node_n21 [color=transparent]
node_n18 -> node_n21 [color=transparent]
node_n2 -> node_n4:f0 [label=\\"a\\"]
node_n3 -> node_n4:f1
node_n4 -> node_n5:f0 [label=\\"a\\"]
node_n6 -> node_n5:f1
node_n19 -> node_n20:f0
node_n4 -> node_n20:f1 [label=\\"a\\"]
node_n17 -> node_n20:f2
node_n19 -> node_n21:f0
node_n22 -> node_n21:f1
node_n18 -> node_n21:f2
}"
`;

exports[`if(b==2) {a=2;} else {if(b==1) {a=1;} else {a=0;}} 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n3 [label=\\"2\\"]
node_n5 [label=\\"b\\"]
node_n6 [label=\\"2\\"]
node_n4 [
label=\\"== |<f0>  | <f1> \\"
shape=\\"record\\"
]
node_n7 [label=\\"a\\"]
node_n2 [
label=\\"<f0> 1| <f1> cond | <f2> 2\\"shape=\\"record\\"
]
node_n5 -> node_n4 [color=transparent]
node_n6 -> node_n4 [color=transparent]
node_n3 -> node_n2 [color=transparent]
node_n4 -> node_n2 [color=transparent]
node_n7 -> node_n2 [color=transparent]
node_n5 -> node_n4:f0
node_n6 -> node_n4:f1
node_n3 -> node_n2:f0
node_n4 -> node_n2:f1
node_n7 -> node_n2:f2
}"
`;

exports[`if(b==2) {b=10;} else {b=2*b;} 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n3 [label=\\"10\\"]
node_n5 [label=\\"b\\"]
node_n6 [label=\\"2\\"]
node_n4 [
label=\\"== |<f0>  | <f1> \\"
shape=\\"record\\"
]
node_n7 [label=\\"2\\"]
node_n8 [
label=\\"<f0> * | <f1> *\\"
shape=\\"record\\"
]
node_n2 [
label=\\"<f0> 1| <f1> cond | <f2> 2\\"shape=\\"record\\"
]
node_n5 -> node_n4 [color=transparent]
node_n6 -> node_n4 [color=transparent]
node_n7 -> node_n8 [color=transparent]
node_n5 -> node_n8 [color=transparent]
node_n3 -> node_n2 [color=transparent]
node_n4 -> node_n2 [color=transparent]
node_n8 -> node_n2 [color=transparent]
node_n5 -> node_n4:f0
node_n6 -> node_n4:f1
node_n7 -> node_n8:f0
node_n5 -> node_n8:f1
node_n3 -> node_n2:f0
node_n4 -> node_n2:f1
node_n8 -> node_n2:f2
}"
`;

exports[`post decrement 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n2 [label=\\"i\\"]
node_n4 [label=\\"1\\"]
node_n3 [
label=\\"<f0> + | <f1> -\\"
shape=\\"record\\"
]
node_n2 -> node_n3 [color=transparent]
node_n4 -> node_n3 [color=transparent]
node_n2 -> node_n3:f0
node_n4 -> node_n3:f1
}"
`;

exports[`post increment 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n2 [label=\\"i\\"]
node_n4 [label=\\"1\\"]
node_n3 [
label=\\"<f0> + | <f1> +\\"
shape=\\"record\\"
]
node_n2 -> node_n3 [color=transparent]
node_n4 -> node_n3 [color=transparent]
node_n2 -> node_n3:f0
node_n4 -> node_n3:f1
}"
`;

exports[`pre decrement 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n2 [label=\\"i\\"]
node_n4 [label=\\"1\\"]
node_n3 [
label=\\"<f0> + | <f1> -\\"
shape=\\"record\\"
]
node_n2 -> node_n3 [color=transparent]
node_n4 -> node_n3 [color=transparent]
node_n2 -> node_n3:f0
node_n4 -> node_n3:f1
}"
`;

exports[`pre increment 1`] = `
"digraph {
node [shape=box style=filled]
graph [rankdir=\\"LR\\"]
node_n2 [label=\\"i\\"]
node_n4 [label=\\"1\\"]
node_n3 [
label=\\"<f0> + | <f1> +\\"
shape=\\"record\\"
]
node_n2 -> node_n3 [color=transparent]
node_n4 -> node_n3 [color=transparent]
node_n2 -> node_n3:f0
node_n4 -> node_n3:f1
}"
`;
